# nova

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: macros.h
network/: network.hpp
script/: python.cpp
thread/: base.hpp  packet_handler.hpp  reader.hpp  worker.hpp
